--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,6 +1,8 @@
 $font-main: 'PT Serif', serif;
 $font-secondary: 'Yellowtail', cursive;
 
+h1, h2, h3 { font-family: $font-main; font-weight: 700; }
+
 
 a { color: #808369; text-transform: uppercase; font-family: $font-main; font-weight: 700; font-size: 14px;
     
@@ -16,3 +18,17 @@ nav {background-color: #f3f1ec;}
 a:first-child { border-left: none;}
 
 a {border-left: 1px solid #d0ceca; padding-left: 25px; padding-right: 25px;}
+
+span {display: block; font-family: $font-main;}
+
+.contacts { text-align: right; color: #808369; text-transform: uppercase; font-size: 14px; }
+
+.number::before{ content:"\f095"; font-family: FontAwesome; padding-right: 5px; }
+
+.cart::before {content:"\f07a"; font-family: FontAwesome; padding-right: 5px;}
+
+.basket {color: #808369; text-transform: uppercase; font-size: 14px;}
+
+.intro {margin-top: 50px; margin-bottom: 20px;}
+
+.slider img {max-width: 100%; }
