--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,10 +1,11 @@
 $font-main: 'PT Serif', serif;
 $font-secondary: 'Yellowtail', cursive;
+$primary-color: #808369;
 
 h1, h2, h3 { font-family: $font-main; font-weight: 700; }
 
 
-a { color: #808369; text-transform: uppercase; font-family: $font-main; font-weight: 700; font-size: 14px;
+a { color: $primary-color; text-transform: uppercase; font-family: $font-main; font-weight: 700; font-size: 14px;
     
     &:hover { color: white; text-decoration: none; }
 }
@@ -15,20 +16,51 @@ nav {background-color: #f3f1ec;}
 
 .menu{ margin: 30px 0; }
 
-a:first-child { border-left: none;}
+.menu a:first-child { border-left: none;}
 
-a {border-left: 1px solid #d0ceca; padding-left: 25px; padding-right: 25px;}
+.menu a {border-left: 1px solid #d0ceca; padding-left: 25px; padding-right: 25px;}
 
 span {display: block; font-family: $font-main;}
 
-.contacts { text-align: right; color: #808369; text-transform: uppercase; font-size: 14px; }
+.contacts { text-align: right; color: $primary-color; text-transform: uppercase; font-size: 14px; }
 
 .number::before{ content:"\f095"; font-family: FontAwesome; padding-right: 5px; }
 
-.cart::before {content:"\f07a"; font-family: FontAwesome; padding-right: 5px;}
+.cart::before {content:"\f07a"; font-family: FontAwesome; padding-right: 10px;}
 
-.basket {color: #808369; text-transform: uppercase; font-size: 14px;}
+.basket {color: $primary-color; text-transform: uppercase; font-size: 14px;}
 
 .intro {margin-top: 50px; margin-bottom: 20px;}
 
-.slider img {max-width: 100%; }
+.index {position: relative;}
+
+.slider { padding-left: 35px; padding-right: 25px; 
+    img {max-width: 100%;}
+}
+
+.slider-intro {position: absolute; margin: 0 auto; top: 50%; left: 50%; transform: translate(-50%,-50%);
+
+    .slider-intro__text {color: white; font-family: $font-main; font-size: 60px; text-transform: uppercase; text-align: center;}
+    
+    .slider-intro__top-line {width: 111px; height: 2px; background-color: white; margin-bottom: 50px;}
+    
+        .slider-intro__bottom-line {width: 111px; height: 2px; background-color: white; margin-top: 50px;}
+    
+            .slider-intro__button { background-color: #ffb18b; text-transform: uppercase; width: 275px; border: none;   padding: 25px 60px; outline: none; font-size: 16px; letter-spacing: 2px; margin: 0 auto; text-align: center; margin-top: 50px;}
+                
+    .slider-intro__button a { color: white; }
+}
+
+
+.slick-prev, .slick-next, .slick-arrow {display: none !important;}
+
+.title { margin-top: 100px;
+
+.title__img {text-align: center; position: relative;}
+
+    .title__text {text-align: center; position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%); margin: 0 auto; width: 100%;}
+
+        .title__head { color: $primary-color; font-family: $font-main; text-transform: uppercase; font-size: 14px;}
+
+            .title__description {color: #434343; font-size: 35px; }
+}
